fix ProjectGrid overflow and add hamburgerBtn toggle

--- a/styles/Layout.module.scss
+++ b/styles/Layout.module.scss
@@ -9,6 +9,8 @@
   padding-top: $navBar_height;
   min-height: 100vh;
   background-color: $backgroundColor;
+  padding-right: 5vw;
+  padding-left: $layoutSpacing;
 }
 
 // .description {
