--- a/styles/ProjectGrid.module.scss
+++ b/styles/ProjectGrid.module.scss
@@ -3,16 +3,17 @@
 .projectGrid {
   border: 1px dashed blue;
   display: grid;
+  grid-gap: 1rem;
   grid-template-columns: repeat(1, minmax(0.5fr, 1fr));
   // grid-template-columns: repeat(auto-fill, minmax(var(--auto-grid-min-size), 1fr));
   // --auto-grid-min-size: 100vw;
-  grid-gap: 1rem;
+  width: 100%;
 }
 
 /* Large Tablet or Desktop */
 @media screen and (min-width: $desktop_breakpoint) {
   .projectGrid {
     border-color: red;
-    grid-template-columns: repeat(2, 50%);
+    grid-template-columns: repeat(2, 0.5fr);
   }
 }
